--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -378,22 +378,22 @@ For the B conditions we prepared, for each dataset condition in each task, a spr
 
 % We established that our two tasks would entail choosing a university and selecting a restaurant for a large social event.  These tasks were selected because in PS.1, the majority of people stated that they had used multiple websites for such tasks.  We used two different variables for each task.  where the restaurant was located (Glasgow and Cambridge) and which subject people chose (sport science and history).  For the restaurant task, the cities Glasgow and Cambridge were chosen because they were geographically distant to participants, and would therefore minimise likelihood of prior familiarity with the restaurants or location.  For the University selection task, two university courses were selected at random from the complete university guide\footnote{The Complete University Guide:\\\url{www.thecompleteuniversityguide.co.uk}}, and the six top-ranked universities for each subject were selected as candidates.  We selected six because it enables us to scope our study, we found through two pilot studies that six data sources provided a sufficient challenge for users to explore the data and required them to use DP's main features. We manually collected the key data points from the websites for use in DP and into Excel spreadsheets (which 40\% of the participants in PS.1 said that had previously used to compare data).
 
-\begin{table}[htbp]
-\begin{center}
-\small
-\begin{tabular}{|p{3cm}|p{4.7cm}|}
-\hline
-Task	 & Data Sources\\
-\hline
-Three universities they would apply to study 1)~Sport Science, and 2)~History & www.thecompleteuniversityguide.co.uk, www.ucas.ac.uk, unistats.direct.gov.uk, www.timeshighereducation.co.uk/world-university-rankings\\
-\hline
-Restaurant they would book for 12 friends in 3)~Cambridge, and 4)~Glasgow & www.yelp.co.uk, www.tripadvisor.co.uk, ratings.food.gov.uk, facebook and google plus.\\
-\hline
-\end{tabular}
-\end{center}
-\caption{For each type of task we used two variables, which affected which data we used from the relevant data sources.} \label{tab:studyfactors}
-\normalsize
-\end{table}
+%% \begin{table}[htbp]
+%% \begin{center}
+%% \small
+%% \begin{tabular}{|p{3cm}|p{4.7cm}|}
+%% \hline
+%% Task	 & Data Sources\\
+%% \hline
+%% Three universities they would apply to study 1)~Sport Science, and 2)~History & www.thecompleteuniversityguide.co.uk, www.ucas.ac.uk, unistats.direct.gov.uk, www.timeshighereducation.co.uk/world-university-rankings\\
+%% \hline
+%% Restaurant they would book for 12 friends in 3)~Cambridge, and 4)~Glasgow & www.yelp.co.uk, www.tripadvisor.co.uk, ratings.food.gov.uk, facebook and google plus.\\
+%% \hline
+%% \end{tabular}
+%% \end{center}
+%% \caption{For each type of task we used two variables, which affected which data we used from the relevant data sources.} \label{tab:studyfactors}
+%% \normalsize
+%% \end{table}
 
 \subsection{Data Collection and Analysis}
 Each study was overseen by a facilitator and an observer: the role of the facilitator was to explain the study's protocols to the participant and to answer any questions; the role of the observer was to monitor the study and record observations.  Both the facilitator and observer were trained on the purpose of the study, their respective roles, and how they could or couldn't influence the study.   Explicitly, the facilitator and the observer were trained to identify processes that participants might use during a task, so that they could thematically categorise them.  Initially, we identified the following themes: organisation of data, eliminating candidates, co-referencing, and visualisations. The studies were conducted over a period of 4 days.  At the end of each day, the facilitators and observers met to discuss the studies' data and to revisit protocols, if necessary.  During the lab study, we recorded the audio and the participant's actions on screen. We asked the participants to follow a \emph{think-aloud} protocol as they worked, so that we could understand the reasoning behind their actions.  At the end of the study, the participant completed a short exit survey.
