--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -94,8 +94,8 @@ breaklinks=true,
 \maketitle
 
 \begin{abstract}
-The information processing capabilities of humans enable them to opportunistically draw and integrate knowledge from nearly any information source.  However, the integration of digital, structured data from diverse sources remains difficult, due to problems of heterogeneity that arise when data modeled separately are brought together.  In this paper, we present an investigation of the feasibility of extending the scope of Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, with the objective of allowing  users to take advantage of the vast, emerging ecosystems of structured data currently becoming available.  In this study, we conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. Observations from these pre-studies led to our designing \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed, first, that participants readily understood the new interaction mechanisms which were introduced.  Secondly, participants made more carefully justified decisions, even while weighing a greater number of factors, moreover expending less effort, during subjective-choice tasks when using DataPalette, than with a control set-up (web page and spreadsheet interface). 
-%The information processing capabilities of humans enable people to opportunistically draw and integrate knowledge from nearly any information sources that become available to them.  However, supporting similar, opportunistic integration of digital, structured data from diverse sources remains difficult without tedious, manual integration, due to problems of heterogeneity that arise when data modeled and represented differently are brought together.  In this paper, we investigate the feasibility of minimally extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to take advantage of the vast emerging ecosystems of structured data being made available.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
+The information processing capabilities of humans enable them to opportunistically draw and integrate knowledge from nearly any information source.  However, the integration of digital, structured data from diverse sources remains difficult, due to problems of heterogeneity that arise when data modelled separately are brought together.  In this paper, we present an investigation of the feasibility of extending the scope of Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, with the objective of allowing  users to take advantage of the vast, emerging ecosystems of structured data currently becoming available.  In this study, we conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. Observations from these pre-studies led to our designing \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed, first, that participants readily understood the new interaction mechanisms which were introduced.  Secondly, participants made more carefully justified decisions, even while weighing a greater number of factors, moreover expending less effort, during subjective-choice tasks when using DataPalette, than with a control set-up (web page and spreadsheet interface). 
+%The information processing capabilities of humans enable people to opportunistically draw and integrate knowledge from nearly any information sources that become available to them.  However, supporting similar, opportunistic integration of digital, structured data from diverse sources remains difficult without tedious, manual integration, due to problems of heterogeneity that arise when data modelled and represented differently are brought together.  In this paper, we investigate the feasibility of minimally extending digital Personal Information Management (PIM) tools to support lightweight, user-driven mixing of previously un-integrated data, towards enabling users to take advantage of the vast emerging ecosystems of structured data being made available.  We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of \emph{DataPalette}, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 % While people naturally draw from diverse information sources in the course of routine decision-making tasks, complementary support for managing heterogeneous data in digital Personal Information Management (PIM) tools remains poor. In this paper, we present an initial investigation of user-driven, ad-hoc data integration approaches for PIM, towards enabling greater use of the emerging ecosystems of structured data on the Web. We conducted an exploratory, sequential, mixed-method investigation, starting with two pre-studies of the data integration needs and challenges, respectively, of Web-based data sources. These observations led to our design of DataPalette, an interface that introduced simple co-reference and group multi-path-selection mechanisms for working with terminologically and structurally heterogeneous data.  Our lab study showed that participants understood the interaction mechanisms introduced, and made more carefully-justified decisions during subjective-choice tasks when using DataPalette than when using a control interface, drawing information from more data sources in the process.
 
 %% While people naturally draw from diverse information sources in the course of routine decision-making, complementary support for managing diverse, heterogeneous data in digital Personal Information Management (PIM) tools remains poor.
@@ -180,7 +180,7 @@ DataPalette's approach exhibits similarities with the user-driven methods just m
 \section{Pre-studies: Identifying Needs and Challenges}
 %% not sure where this goes >> but i want to keep it
 
-In the first of two pre-studies, we aimed to get an updated understanding of the use of multiple information sources in information gathering on the Web. Several basic questions drove our inquiry.  First, were people increasingly relying only on a handful of ``supersites'' (Facebook, Wikipedia), or searching across distributed sources of information?  If the former were true, merely integrating PIM tools with the small number of supersites would provide greater benefit than tackling the more challenging problem of integrating data from an array of arbitrary sources on the Web.  In a related vein, why did some people choose a single source for information gathering, while others selected multiple sources?  What advantages were gained in consulting multiple sources? 
+In the first of two pre-studies, we aimed to get an updated understanding of the use of multiple information sources in information gathering on the Web. Several basic questions drove our inquiry.  First, were people increasingly relying only on a handful of ``super-sites'' (Facebook, Wikipedia), or searching across distributed sources of information?  If the former were true, merely integrating PIM tools with the small number of super-sites would provide greater benefit than tackling the more challenging problem of integrating data from an array of arbitrary sources on the Web.  In a related vein, why did some people choose a single source for information gathering, while others selected multiple sources?  What advantages were gained in consulting multiple sources? 
 
 % If they did what kinds of tasks did people required diverse information collection and were these kinds of tasks rare?  If so, this would suggest that perhaps specialised interfaces could be concocted for this purpose rather than it being a PIM need. 
 
@@ -244,12 +244,12 @@ Once established, equivalent properties were examined, first, for naming inconsi
 \subsubsection{Results}
 While most of the data records examined in PS.2 were small and relatively simple, nearly one in each category was substantially larger and more complex. In particular, Amazon, Soundcloud, Twitter and Weather Underground were the most complex in each of their respective categories. Mapping equivalent properties among the instance records for each category revealed little overall overlap, except among the smallest records (which had few properties to begin with).  This finding suggests that consolidating such records would substantially increase the amount of information held by each.  Some of the unique properties were primarily for internal use (such as service-specific IDs).  Some, however, contained useful properties which were simply absent in alternate sources.  For example, among the 4 music data providers examined, only Spotify listed the source album that featured a particular song.  Such omissions revealed that data APIs often were reflective of each provider's own specific needs, necessitating the integration of information across multiple sources to create more complete and useful representations.
 
-A second observation in PS.2 was that equivalent properties were only rarely given the same name. Thus, terminological (or naming) heterogeneity was prevalent across nearly all records observed.  Structural inconsistencies were rarer, with the most common case occuring where a record that represented a value as a simple literal was expanded out in another as an entire sub-structure.  This most commonly occurred for fields with common string serialisations, such as dates, prices, and intervals.  Meanwhile, examples of modelling differences were even rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts from one source not mapping perfectly to those of another source, for example, due to differences in methods of measurement, or measurement units.
+A second observation in PS.2 was that equivalent properties were only rarely given the same name. Thus, terminological (or naming) heterogeneity was prevalent across nearly all records observed.  Structural inconsistencies were rarer, with the most common case occurring where a record that represented a value as a simple literal was expanded out in another as an entire sub-structure.  This most commonly occurred for fields with common string serialisations, such as dates, prices, and intervals.  Meanwhile, examples of modelling differences were even rarer than those of structural heterogeneity, with the few we found mostly being attributed to concepts from one source not mapping perfectly to those of another source, for example, due to differences in methods of measurement, or measurement units.
 % We also encountered two examples of records in which multiple data fields were nested as a single literal, textual ``description'' field.  This behaviour stems from the intended use of such records only by human readers, rather than in structured data applications.  
 
 To examine value consistency, we compared source schemas provided in the API and feed documentation of the data providers.  There was substantial terminological inconsistency among the value names for enumerated types, with exact matches occurring less than 10\% of examined value pairs.  There were also range inconsistencies, corresponding to cases where values represented in one record were not represented as valid values in the range of the equivalent property in the target schema.  A simple example of this was the ``gender'' property  on Facebook, which allowed only ``male'' and ``female'' values, while Google+ included a third option,``other''.  
 
-In summary, we found in our PS.2, that while data records ranged in complexity, no single source subsumed any others; all contained unique properties.  Moreover, the most common types of heterogeneity exhibited were terminological and value-related, which occurred vastly more often than structural or modeling issues.
+In summary, we found in our PS.2, that while data records ranged in complexity, no single source subsumed any others; all contained unique properties.  Moreover, the most common types of heterogeneity exhibited were terminological and value-related, which occurred vastly more often than structural or modelling issues.
 
 %\section{Designing the DataPalette Interface}
 \section{DataPalette : An Interface for Data Mixing}
@@ -306,7 +306,7 @@ A major challenge with integration from multiple sources is coreference consolid
 \end{center}
 \end{figure}
 
-To remain consistent with the drag-and-drop interactions used throughout the interface, we introduced the ability to simply drag one instance directly on top of another, to specify that these two items should be combined.  This action also caused the \emph{same-as display} in the lower left of the screen to indicate this new combined relationship.  The display also acted as a mechanism to delete/undo combinations, which reverted representations of instances back to their original, separate forms. An illustration of this interaction is provided in Figure \ref{fig:sameas}.  Since individually dragging and dropping items could be tedious for large groups of items, we extended this to allow entire groups to be dropped on to other groups.  DP would then identify matching pairs among items in the dragged and target groups by comparing the labels of items in each group, repsectively.  Only exact matches (excepting white space and underscores) were considered to correspond to label matches, and these were automatically combined.  The rest were added to the target group as distinct elements, which could be manually combined by hand.\looseness=-1
+To remain consistent with the drag-and-drop interactions used throughout the interface, we introduced the ability to simply drag one instance directly on top of another, to specify that these two items should be combined.  This action also caused the \emph{same-as display} in the lower left of the screen to indicate this new combined relationship.  The display also acted as a mechanism to delete/undo combinations, which reverted representations of instances back to their original, separate forms. An illustration of this interaction is provided in Figure \ref{fig:sameas}.  Since individually dragging and dropping items could be tedious for large groups of items, we extended this to allow entire groups to be dropped on to other groups.  DP would then identify matching pairs among items in the dragged and target groups by comparing the labels of items in each group, respectively.  Only exact matches (excepting white space and underscores) were considered to correspond to label matches, and these were automatically combined.  The rest were added to the target group as distinct elements, which could be manually combined by hand.\looseness=-1
 
 %We are considering more sophisticated / less fragile approaches to matching in the future, which would make the system assistive. By making consolidation user-driven, we gave users freedom to combine things when it suited them. As we saw in the system evaluation, while in certain circumstances users preferred combining representations, in others people preferred not to.  Thus, user-initiated consolidation afforded an additional flexibility that was ultimately deemed beneficial.
 
@@ -315,7 +315,7 @@ PS.2 revealed that enumerated values of properties were often inconsistent, e.g.
 
 \subsubsection{``Do What I Mean'' Visualisation}
 
-To make it easier for people to visually compare aspects of instances, we created a charting tool and mapping feature.  To ensure that these tools were suitable for rapid utilisation, (e.g., data exploration), they were designed to automatically configure display parameters based on the instances or groups that were dropped onto them. In the current prototype, this ``Do What I Mean'' behaviour automatically would set whether the plot was a histogram representation (counts of values) or a numeric value display, based upon the types of the dereferenced values being plotted.  Hence, non-numeric values would be histogrammed, while numeric values were displayed as a bar or line chart.  Similarly, the map was made to detect address strings and latitude/longitude pairs, geocoding them where appropriate, and determining the optimal bounding box to display all items at maximum zoom.
+To make it easier for people to visually compare aspects of instances, we created a charting tool and mapping feature.  To ensure that these tools were suitable for rapid utilisation, (e.g., data exploration), they were designed to automatically configure display parameters based on the instances or groups that were dropped onto them. In the current prototype, this ``Do What I Mean'' behaviour automatically would set whether the plot was a histogram representation (counts of values) or a numeric value display, based upon the types of the dereferenced values being plotted.  Hence, non-numeric values would be shown on a histogram, while numeric values were displayed as a bar or line chart.  Similarly, the map was made to detect address strings and latitude/longitude pairs, geocoding them where appropriate, and determining the optimal bounding box to display all items at maximum zoom.
 
 \subsubsection{Model-based brushing}
 To avoid the confusion of having a single instance represented across several groups, we provided \emph{universal brushing} across the interface.  Hovering over any representation of any instance (an instance block, a map marker or a histogram bar), would cause all other visible representations of that instance to lightly glow, enabling the user to instantly identify all the places that a single instance was represented.
@@ -370,9 +370,9 @@ In the control (B) condition trials, participants were given a web browser with 
 
 We established that our two tasks would entail choosing a university and selecting a restaurant for a large social event.  These tasks were selected because in PS.1, the majority of people stated that they had used multiple websites for such tasks.  We introduced a dependent \emph{dataset} variable for each task.  For the University selection task, this variable corresponded to the course for which to select a University, between history and sports science, and corresponding university candidates for each course.  For the restaurant selection task, the variable corresponded to the city and respective restaurants located therein; for this experiment, Glasgow and Cambridge were chosen because they were geographically distant from participants, and would therefore minimise prior familiarity.  
 
-For each of the two tasks, the final candidates from which participants made their selection were pre-selected by us.  For the university task, the six top-ranked universities for each subject according to The Complete University Guide were selected as candidates.  We selected six in order to limit the difficulty of the task given the fixd time allocated for each trial.  In addition, for each course, we provided participants with the profile of a hypothetical student applying to the course, for whom they should base their choice.  This profile included the student's entrance admissions tests scores (corresponding to A/AS-levels), location of the student's hometown, and personal preferences pertaining to how far they wanted to be from home, tuition they could afford, gender balance, and social-athletic-academic balance.
+For each of the two tasks, the final candidates from which participants made their selection were pre-selected by us.  For the university task, the six top-ranked universities for each subject according to The Complete University Guide were selected as candidates.  We selected six in order to limit the difficulty of the task given the fixed time allocated for each trial.  In addition, for each course, we provided participants with the profile of a hypothetical student applying to the course, for whom they should base their choice.  This profile included the student's entrance admissions tests scores (corresponding to A/AS-levels), location of the student's hometown, and personal preferences pertaining to how far they wanted to be from home, tuition they could afford, gender balance, and social-athletic-academic balance.
 
-For the restaurant task, we selected six restaurants at random from Yelp's list of popular eateries for each of the two cities.  In addition, for each of the two cities, we generated 12 social network profiles for hypothetical friends who lived in either city, to accompany the participant to the restaraunt.  Each friend's profile expressed their street address and preference for favourite cuisine type which could be taken into consideration by participants during the venue selection process. 
+For the restaurant task, we selected six restaurants at random from Yelp's list of popular eateries for each of the two cities.  In addition, for each of the two cities, we generated 12 social network profiles for hypothetical friends who lived in either city, to accompany the participant to the restaurant.  Each friend's profile expressed their street address and preference for favourite cuisine type which could be taken into consideration by participants during the venue selection process. 
 
 For the B conditions we prepared, for each dataset condition in each task, a spreadsheet listing key statistics for each of the relevant candidates (e.g., universities or restaurants) assembled from each of a pre-selected set of 6 popular data sources (university and restaurant guides), and collated them into Excel spreadsheets.  
 
@@ -481,7 +481,7 @@ Although we did not have an explicit measure of effort for this experiment (such
 Since the tasks were subjective-choice, we could not evaluate the `correctness' of answers.  However, to determine whether there was a difference in variability of answers between interface conditions, we plotted the choices on a histogram for each trial, per task and dataset for both conditions, visible in Figure \ref{fig:chosen_results}.  As can be seen, there was less agreement among universities than restaurants, although little agreement overall in both conditions. This is likely due to the many subjective factors involved in such choice tasks.
 
 \subsection{Strategies: Successive Elimination vs Tallying}
-As described later in this section, we noticed several different strategies the participants used to evaluate each candidate selection. One common strategy was \emph{successive elimination}, that is, to regard a single dimension or factor at a time, starting with the most important, and ruling out candidates not meeting the minimum requirements for that value.  However, when there was no clear aspect that was ``most important'', this  ``greedy'' strategy can result in suboptimal decisions.  Another tactic, which we called \emph{tallying the pros and cons}, was to consider all candidate choices together, totaling up the advantages and disadvantages of each, potentially weighed by its perceived importance.  This strategy was less vulnerable to getting stuck in local maxima than the former.
+As described later in this section, we noticed several different strategies the participants used to evaluate each candidate selection. One common strategy was \emph{successive elimination}, that is, to regard a single dimension or factor at a time, starting with the most important, and ruling out candidates not meeting the minimum requirements for that value.  However, when there was no clear aspect that was ``most important'', this  ``greedy'' strategy can result in suboptimal decisions.  Another tactic, which we called \emph{tallying the pros and cons}, was to consider all candidate choices together, totalling up the advantages and disadvantages of each, potentially weighed by its perceived importance.  This strategy was less vulnerable to getting stuck in local maxima than the former.
 
 To understand whether the interface influenced the choice of strategy, we measured the number of candidates the participant considered at their final choice.  This was a strong marker for use of each strategy; people who used the successive elimination strategy arrived with only 1--2 candidates at decision time, while those that tallied still maintained the entire starting set.\looseness=-1
 
@@ -559,7 +559,7 @@ Assessing whether or not DP improved task performance (h3) was difficult, given 
 \subsection{Design Limitations}
 In addition to the aforementioned feature requests, we observed a number of potential areas for improvement in the design of the DP interface.  One such area pertained to window layout and screen real-estate management: participants were prone to opening up a large number of windows, including maps and charts.  When their workspaces started to fill up, we found that participants spent a lot of time arranging windows, and that they tended to forget what each window represented.  We plan to address these issues in the next version of DataPalette.
 
-A key design decision we made at the outset was to target only the most common forms of heterogeneity observed in PS.2.  To expand DP's integration capabilities, we are considering a number of new interaction affordances for facilitating field combination and splitting, and unit of measure reconciliation.  This would cover a majority of the structural and modeling-oriented heterogeneity cases observed in DP.2.  Extending the ``Do What I Mean'' capabilities of the visualisation features to be unit-of-measure-aware, we believe, would be valuable to users.  A core problem with realizing such an capability, however, is that few sources explicitly annotated data values with measurement units.
+A key design decision we made at the outset was to target only the most common forms of heterogeneity observed in PS.2.  To expand DP's integration capabilities, we are considering a number of new interaction affordances for facilitating field combination and splitting, and unit of measure reconciliation.  This would cover a majority of the structural and modelling-oriented heterogeneity cases observed in DP.2.  Extending the ``Do What I Mean'' capabilities of the visualisation features to be unit-of-measure-aware, we believe, would be valuable to users.  A core problem with realising such an capability, however, is that few sources explicitly annotated data values with measurement units.
 
 \subsection{Study Limitations}
 
@@ -624,13 +624,13 @@ As expressed in Voltaire's poem \emph{La B\'{e}gueule}, ``the best is the enemy 
 
 In particular, the results suggest that the key affordances for the suitability of such tools are flexibility, simplicity, and ease of use.  Just as work in the ``user-subjective approach'' to PIM (e.g., \cite{user-subjective}) showed that personal, user-specified attributes were ultimately the most useful, granting users the flexibility to combine or separate information items as needed allowed the tool to support the varied strategies participants employed to compare and examine their options. Second, the low cost of use  (in terms of time and effort required) meant that integration could be done (and undone) as appropriate throughout the ``inner loop'' of users' exploratory processes.  The reason this was significant was that this process itself determined, incrementally, the information and sources that were ultimately considered for the final decision. Therefore, any integration approach that required sources to be specified \emph{a priori}, or that was time or effort-intensive at each integration step, was simply not appropriate for this context.
 
-Due to the promising findings of this study, we plan to continue investigating lightweight, \emph{in-situ} approaches to supporting ad-hoc data integration during the course of sensemaking and decision-making activities.  In particular, we are examining gestural input methods for the purposes of supporting more fluid exploration and mixing.  On the basis of feedback from reviewers, we have also begun considering semi-automatic and crowd-powered methods to help users quickly resolve challenging reconciliation problems they might encounter.
+Due to the promising findings of this study, we plan to continue investigating lightweight, \emph{in-situ} approaches to supporting ad-hoc data integration during the course of sense-making and decision-making activities.  In particular, we are examining gestural input methods for the purposes of supporting more fluid exploration and mixing.  On the basis of feedback from reviewers, we have also begun considering semi-automatic and crowd-powered methods to help users quickly resolve challenging reconciliation problems they might encounter.
 
-% instead of being a separate step requiring pre-planning one that and that information sources could be brought in or rmeoved as needed.
+% instead of being a separate step requiring pre-planning one that and that information sources could be brought in or removed as needed.
 
-%% this study demonstrated that user-driven and-defined approach to information integration provided the flexibility to allow people to organize and support information gathering tasks in different ways.  The result, that  people weighed more factors from a greater number of information sources, while expending equal or less time and effort, demonstrated that such tools could broaden the information gathering capacities and allow people to make better use of available information sources during decision-making activities. 
+%% this study demonstrated that user-driven and-defined approach to information integration provided the flexibility to allow people to organise and support information gathering tasks in different ways.  The result, that  people weighed more factors from a greater number of information sources, while expending equal or less time and effort, demonstrated that such tools could broaden the information gathering capacities and allow people to make better use of available information sources during decision-making activities. 
 
-%% this was having a sufficiently low barrier of effort to use, provided both the flexibillity and facility to support information gathering tasks associated with decision-making activities.  The result was people weighed more factors from a greater number of information sources, broading the scope of their information gathering for such decisions, while expending comparable or less effort and time.
+%% this was having a sufficiently low barrier of effort to use, provided both the flexibility and facility to support information gathering tasks associated with decision-making activities.  The result was people weighed more factors from a greater number of information sources, broadening the scope of their information gathering for such decisions, while expending comparable or less effort and time.
 
 %% Moreover, through our pre-studies and DataPalette evaluation, we have shown that much of heterogeneity exhibited by structured data feeds available on the Web today can be managed reasonably through easy to use, and intuitive interactive approaches for end-users. 
 
@@ -642,7 +642,7 @@ The work presented in this paper was supported by the SOCIAM project, funded by 
 
 %%  things as simple as coreference involved any subjective judgement, 
 
-%% the abililty to  In our investigation we found that complete approaches to data integration
+%% the ability to  In our investigation we found that complete approaches to data integration
 
 % - data integration literature demands `correct' but perfect is the enemy of the good.
 % ``perfect'' be the enemy of the good
