--- a/chi2013-webbox.tex
+++ b/chi2013-webbox.tex
@@ -108,11 +108,13 @@ The information processing capabilities of humans enable them to opportunistical
 %% exploratory, sequential mixed-method study of 
 \end{abstract}
 
-\keywords{Personal Information Management, Personal Data Management, User-driven data integration}
+\keywords{Personal information management; end-user data integration; mash-ups; sensemaking with data}
 
-\category{H.5.m.}{Information Interfaces and Presentation (e.g. HCI)}{Miscellaneous}
+\category{H.5.2.}{Interaction styles}{Direct manipulation}
+\category{H.2.5.}{Heterogeneous Databases}{Data translation}
+\category{H.5.m.}{Information Interfaces and Presentation}{Miscellaneous}
 
-\terms{Human Factors; Design; Measurement.}
+% \terms{Human Factors; Design; Measurement.}
 
 \section{Introduction}
 In recent years, an unprecedented quantity and variety of information has been made available as structured data on the Web.  The explosion of structured data APIs and downloadable data sets has arrived from many different sectors, including retail, banking, social networking, opinion and recommendation sites, mobile and desktop apps, as well as from new kinds sensors and devices such as wearable activity and bio-sensors. Beyond commercial apps and services, governments have embraced releasing data as a way of providing transparency and accountability to their citizens, causing a huge push to release ``open data'' to the public, at scales ranging from the smallest local councils to entire national departments.  
